--- a/assets/templates/alphabet.html
+++ b/assets/templates/alphabet.html
@@ -3,34 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Alphabet</title>
+    <title>Fusion Pixel - Alphabet {{ width_mode }}</title>
     <style>
         * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
         @font-face {
-            font-family: Fusion-Pixel-12;
-            src: url("fusion-pixel.woff2");
+            font-family: Fusion-Pixel-{{ width_mode }};
+            src: url("fusion-pixel-{{ width_mode }}.woff2?r={{ configs.build_random_key }}");
         }
-        body {
-            color: #4b4b4b;
-            font-family: Fusion-Pixel-12, sans-serif;
-            font-size: 48px;
-            line-height: 48px;
-            word-break: break-all;
-            background-image: linear-gradient(90deg, rgba(255, 0, 0, 0.1) 4%, rgba(0, 0, 0, 0) 4%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 255, 0.1) 50%, rgba(0, 0, 255, 0.1) 54%, rgba(0, 0, 0, 0) 54%), linear-gradient(180deg, rgba(255, 0, 0, 0.1) 4%, rgba(0, 0, 0, 0) 4%);
-            background-size: 48px 48px;
-        }
+        {% if width_mode == 'monospaced' %}
+            body {
+                color: #4b4b4b;
+                font-family: Fusion-Pixel-{{ width_mode }}, sans-serif;
+                font-size: {{ font_config.px * 4 }}px;
+                line-height: {{ font_config.px * 4 }}px;
+                word-break: break-all;
+                background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.1) 8%, transparent 8%), linear-gradient(180deg, transparent 96%, rgba(0, 0, 0, 0.1) 96%);
+                background-size: {{ font_config.px * 2 }}px {{ font_config.px * 4 }}px;
+            }
+        {% else %}
+            body {
+                color: #4b4b4b;
+                font-family: Fusion-Pixel-{{ width_mode }}, sans-serif;
+                font-size: {{ font_config.px * 4 }}px;
+                line-height: {{ font_config.line_height_px * 4 }}px;
+                word-break: break-all;
+                background-image: linear-gradient(180deg, transparent 96%, rgba(0, 0, 0, 0.1) 96%);
+                background-size: auto {{ font_config.line_height_px * 4 }}px;
+            }
+        {% endif %}
     </style>
+    {% include "common/analytics.html" %}
 </head>
 <body>
-<div>
-    ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789
-    <br>
-    abcdefghijklmnopqrstuvwxyz!"#$%&'()*+,-./:;<=>?@[\]^_`{|}~
-    <br>
-    {{ alphabet }}
-</div>
+ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789
+<br>
+abcdefghijklmnopqrstuvwxyz!"#$%&'()*+,-./:;<=>?@[\]^_`{|}~
+<br>
+{{ alphabet }}
 </body>
 </html>
