调整主页样式

--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -35,7 +35,7 @@
             flex-direction: row;
             align-items: center;
             justify-content: center;
-            background-color: lightcoral;
+            background-color: darkorange;
         }
         .option {
             height: 100%;
