--- a/assets/templates/alphabet.html
+++ b/assets/templates/alphabet.html
@@ -29,10 +29,10 @@
                 color: #4b4b4b;
                 font-family: Fusion-Pixel-{{ width_mode }}, sans-serif;
                 font-size: {{ font_config.px * 4 }}px;
-                line-height: {{ font_config.line_height_px * 4 }}px;
+                line-height: {{ font_config.display_line_height_px * 4 }}px;
                 word-break: break-all;
                 background-image: linear-gradient(180deg, transparent 96%, rgba(0, 0, 0, 0.1) 96%);
-                background-size: auto {{ font_config.line_height_px * 4 }}px;
+                background-size: auto {{ font_config.display_line_height_px * 4 }}px;
             }
         {% endif %}
     </style>
