预览页使用衬线字体进行后备

--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -17,7 +17,7 @@
                     src: url("fusion-pixel-{{ width_mode }}.woff2?r={{ configs.build_random_key }}");
                 }
                 .font-{{ width_mode }} {
-                    font-family: {{ font_family }}, sans-serif;
+                    font-family: {{ font_family }}, serif;
                 }
             {% endwith %}
         {% endfor %}
