--- a/assets/templates/alphabet.html
+++ b/assets/templates/alphabet.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Fusion Pixel - Alphabet {{ width_mode }}</title>
+{% extends "common/base.html" %}
+{% block title %}Fusion Pixel - Alphabet {{ width_mode }}{% endblock %}
+{% block style %}
     <style>
         * {
             margin: 0;
@@ -15,36 +12,34 @@
             src: url("fusion-pixel-{{ width_mode }}.woff2?r={{ configs.build_random_key }}");
         }
         {% if width_mode == 'monospaced' %}
-            body {
-                color: #4b4b4b;
-                font-family: Fusion-Pixel-{{ width_mode }}, sans-serif;
-                font-size: {{ font_config.px * 4 }}px;
-                line-height: {{ font_config.px * 4 }}px;
-                word-break: break-all;
-                background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.1) 8%, transparent 8%), linear-gradient(180deg, transparent 96%, rgba(0, 0, 0, 0.1) 96%);
-                background-size: {{ font_config.px * 2 }}px {{ font_config.px * 4 }}px;
-            }
+        body {
+            color: #4b4b4b;
+            font-family: Fusion-Pixel-{{ width_mode }}, sans-serif;
+            font-size: {{ font_config.px * 4 }}px;
+            line-height: {{ font_config.px * 4 }}px;
+            word-break: break-all;
+            background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.1) 8%, transparent 8%), linear-gradient(180deg, transparent 96%, rgba(0, 0, 0, 0.1) 96%);
+            background-size: {{ font_config.px * 2 }}px {{ font_config.px * 4 }}px;
+        }
         {% else %}
-            body {
-                color: #4b4b4b;
-                font-family: Fusion-Pixel-{{ width_mode }}, sans-serif;
-                font-size: {{ font_config.px * 4 }}px;
-                line-height: {{ font_config.display_line_height_px * 4 }}px;
-                word-break: break-all;
-                background-image: linear-gradient(180deg, transparent 96%, rgba(0, 0, 0, 0.1) 96%);
-                background-size: auto {{ font_config.display_line_height_px * 4 }}px;
-            }
+        body {
+            color: #4b4b4b;
+            font-family: Fusion-Pixel-{{ width_mode }}, sans-serif;
+            font-size: {{ font_config.px * 4 }}px;
+            line-height: {{ font_config.display_line_height_px * 4 }}px;
+            word-break: break-all;
+            background-image: linear-gradient(180deg, transparent 96%, rgba(0, 0, 0, 0.1) 96%);
+            background-size: auto {{ font_config.display_line_height_px * 4 }}px;
+        }
         {% endif %}
     </style>
-    {% include "common/analytics.html" %}
-</head>
-<body>
-ABCDEFGHIJKLMNOPQRSTUVWXYZ
-<br>
-abcdefghijklmnopqrstuvwxyz
-<br>
-0123456789 !"#$%&'()*+,-./:;<=>?@[\]^_`{|}~
-<br>
-{{ alphabet }}
-</body>
-</html>
+{% endblock %}
+{% block body %}
+    ABCDEFGHIJKLMNOPQRSTUVWXYZ
+    <br>
+    abcdefghijklmnopqrstuvwxyz
+    <br>
+    0123456789 !"#$%&'()*+,-./:;<=>?@[\]^_`{|}~
+    <br>
+    {{ alphabet }}
+{% endblock %}
