--- a/assets/templates/common/base.html
+++ b/assets/templates/common/base.html
@@ -8,11 +8,10 @@
 
     {# 百度统计 #}
     <script>
-        var _hmt = _hmt || [];
         (function () {
-            var hm = document.createElement("script");
+            let hm = document.createElement("script");
             hm.src = "https://hm.baidu.com/hm.js?3fff78ad08b6161b903a61bceb25adb1";
-            var s = document.getElementsByTagName("script")[0];
+            let s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
