--- a/assets/templates/alphabet.html
+++ b/assets/templates/alphabet.html
@@ -1,5 +1,5 @@
 {% extends "common/base.html" %}
-{% block title %}Fusion Pixel - Alphabet {{ width_mode }}{% endblock %}
+{% block title %}Fusion Pixel - Alphabet {{ font_config.size }}px {{ width_mode }}{% endblock %}
 {% block style %}
     <style>
         * {
@@ -8,28 +8,28 @@
             box-sizing: border-box;
         }
         @font-face {
-            font-family: Fusion-Pixel-{{ width_mode }};
-            src: url("fusion-pixel-{{ width_mode }}.woff2?r={{ configs.build_random_key }}");
+            font-family: Fusion-Pixel-{{ font_config.size }}px-{{ width_mode }};
+            src: url("{{ font_config.get_font_file_name(width_mode, 'woff2') }}?r={{ configs.build_random_key }}");
         }
         {% if width_mode == 'monospaced' %}
         body {
             color: #4b4b4b;
-            font-family: Fusion-Pixel-{{ width_mode }}, sans-serif;
-            font-size: {{ font_config.px * 4 }}px;
-            line-height: {{ font_config.px * 4 }}px;
+            font-family: Fusion-Pixel-{{ font_config.size }}px-{{ width_mode }}, sans-serif;;
+            font-size: {{ font_config.size * 4 }}px;
+            line-height: {{ font_config.size * 4 }}px;
             word-break: break-all;
             background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.1) 8%, transparent 8%), linear-gradient(180deg, transparent 96%, rgba(0, 0, 0, 0.1) 96%);
-            background-size: {{ font_config.px * 2 }}px {{ font_config.px * 4 }}px;
+            background-size: {{ font_config.size * 2 }}px {{ font_config.size * 4 }}px;
         }
         {% else %}
         body {
             color: #4b4b4b;
-            font-family: Fusion-Pixel-{{ width_mode }}, sans-serif;
-            font-size: {{ font_config.px * 4 }}px;
-            line-height: {{ font_config.display_line_height_px * 4 }}px;
+            font-family: Fusion-Pixel-{{ font_config.size }}px-{{ width_mode }}, sans-serif;;
+            font-size: {{ font_config.size * 4 }}px;
+            line-height: {{ font_config.line_height * 4 }}px;
             word-break: break-all;
             background-image: linear-gradient(180deg, transparent 96%, rgba(0, 0, 0, 0.1) 96%);
-            background-size: auto {{ font_config.display_line_height_px * 4 }}px;
+            background-size: auto {{ font_config.line_height * 4 }}px;
         }
         {% endif %}
     </style>
