--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -8,11 +8,11 @@
             box-sizing: border-box;
         }
         @font-face {
-            font-family: Fusion-Pixel-12px-monospaced;
+            font-family: fusion-pixel-12px-monospaced;
             src: url("{{ configs.font_size_to_config[12].get_font_file_name('monospaced', 'woff2') }}?r={{ configs.build_random_key }}");
         }
         {% for font_config in configs.font_configs  %}
-        {% with font_family = 'Fusion-Pixel-' ~ font_config.size ~ 'px-proportional' %}
+        {% with font_family = 'fusion-pixel-' ~ font_config.size ~ 'px-proportional' %}
         @font-face {
             font-family: {{ font_family }};
             src: url("{{ font_config.get_font_file_name('proportional', 'woff2') }}?r={{ configs.build_random_key }}");
@@ -89,7 +89,7 @@
             flex-direction: row;
             align-items: center;
             color: white;
-            font-family: Fusion-Pixel-12px-monospaced, sans-serif;
+            font-family: fusion-pixel-12px-monospaced, sans-serif;
             font-size: 24px;
             line-height: 36px;
         }
