--- a/assets/templates/demo.html
+++ b/assets/templates/demo.html
@@ -8,7 +8,7 @@
             box-sizing: border-box;
         }
         {% for width_mode in configs.width_modes %}
-        {% with font_family = 'Fusion-Pixel-' ~ font_config.size ~ 'px-' ~ width_mode %}
+        {% with font_family = 'fusion-pixel-' ~ font_config.size ~ 'px-' ~ width_mode %}
         @font-face {
             font-family: {{ font_family }};
             src: url("{{ font_config.get_font_file_name(width_mode, 'woff2') }}?r={{ configs.build_random_key }}");
@@ -20,7 +20,7 @@
         {% endfor %}
         {% if font_config.size != 12 %}
         @font-face {
-            font-family: Fusion-Pixel-12px-monospaced;
+            font-family: fusion-pixel-12px-monospaced;
             src: url("{{ configs.font_size_to_config[12].get_font_file_name('monospaced', 'woff2') }}?r={{ configs.build_random_key }}");
         }
         {% endif %}
@@ -69,7 +69,7 @@
             flex-direction: row;
             align-items: center;
             color: #4b4b4b;
-            font-family: Fusion-Pixel-12px-monospaced, sans-serif;
+            font-family: fusion-pixel-12px-monospaced, sans-serif;
             font-size: 24px;
             line-height: 36px;
         }
