--- a/assets/templates/common/base.html
+++ b/assets/templates/common/base.html
@@ -6,30 +6,9 @@
     <title>{% block title %}{% endblock %}</title>
     {% block style %}{% endblock %}
 
-    {# 百度统计 #}
-    <script>
-        (function () {
-            let hm = document.createElement('script');
-            hm.src = 'https://hm.baidu.com/hm.js?3fff78ad08b6161b903a61bceb25adb1';
-            let s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
-
     {# 51.LA 网站统计 #}
     <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
-    <script>LA.init({id: 'KDw2RWLvwgZA8EM4', ck: 'KDw2RWLvwgZA8EM4'})</script>
-
-    {# Google Analytics #}
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9J2VKMZMSN"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'G-9J2VKMZMSN');
-    </script>
+    <script>LA.init({id: 'KDw2RWLvwgZA8EM4', ck: 'KDw2RWLvwgZA8EM4'});</script>
 </head>
 <body>
     {% block body %}{% endblock %}
