--- a/assets/templates/common/base.html
+++ b/assets/templates/common/base.html
@@ -8,7 +8,7 @@
 
     {# 51.LA 网站统计 #}
     <script charset="UTF-8" id="LA_COLLECT" src="https://sdk.51.la/js-sdk-pro.min.js"></script>
-    <script>LA.init({id: 'KDw2RWLvwgZA8EM4', ck: 'KDw2RWLvwgZA8EM4'});</script>
+    <script>LA.init({id: 'KDw2RWLvwgZA8EM4', ck: 'KDw2RWLvwgZA8EM4'})</script>
 </head>
 <body>
     {% block body %}{% endblock %}
