--- a/assets/templates/demo.html
+++ b/assets/templates/demo.html
@@ -137,48 +137,46 @@
     <form class="options-group">
         {% for width_mode in width_modes %}
         <label class="option">
-            <input id="radio-width-mode-{{ width_mode }}" name="width_mode" type="radio" onchange="onWidthModeChange('{{ width_mode }}');">
+            <input id="radio-width-mode-{{ width_mode }}" name="width_mode" type="radio" onchange="onWidthModeChange('{{ width_mode }}')">
             <span></span>
             {{ width_mode }}
         </label>
         {% endfor %}
     </form>
-    <div class="btn-apply-theme theme-light" style="top: 36px; left: 0;" onclick="onThemeChange('light');"></div>
-    <div class="btn-apply-theme theme-dark" style="top: 36px; right: 0;" onclick="onThemeChange('dark');"></div>
+    <div class="btn-apply-theme theme-light" style="top: 36px; left: 0;" onclick="onThemeChange('light')"></div>
+    <div class="btn-apply-theme theme-dark" style="top: 36px; right: 0;" onclick="onThemeChange('dark')"></div>
     <div id="page">
         {{ content_html }}
     </div>
     <script>
-        let page = document.getElementById('page');
+        let page = document.getElementById('page')
 
         let settings = {
             widthMode: 'proportional',
             theme: 'light',
-        };
+        }
 
         function applySettings() {
-            localStorage.setItem('settings:demo-{{ font_config.font_size }}px', JSON.stringify(settings));
-            page.className = 'font-' + settings.widthMode;
-            document.body.className = 'theme-' + settings.theme;
+            localStorage.setItem('settings:demo-{{ font_config.font_size }}px', JSON.stringify(settings))
+            page.className = 'font-' + settings.widthMode
+            document.body.className = 'theme-' + settings.theme
         }
 
         function onWidthModeChange(widthMode) {
-            settings.widthMode = widthMode;
-            applySettings();
+            settings.widthMode = widthMode
+            applySettings()
         }
 
         function onThemeChange(theme) {
-            settings.theme = theme;
-            applySettings();
+            settings.theme = theme
+            applySettings()
         }
 
-        (function () {
-            let json = localStorage.getItem('settings:demo-{{ font_config.font_size }}px');
-            if (json) {
-                Object.assign(settings, JSON.parse(json));
-            }
-            document.getElementById('radio-width-mode-' + settings.widthMode).checked = true;
-            applySettings();
-        })();
+        let json = localStorage.getItem('settings:demo-{{ font_config.font_size }}px')
+        if (json) {
+            Object.assign(settings, JSON.parse(json))
+        }
+        document.getElementById('radio-width-mode-' + settings.widthMode).checked = true
+        applySettings()
     </script>
 {% endblock %}
