--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -56,21 +56,29 @@
             text-shadow: 2px 2px #4b4b4b;
         }
         {% endfor %}
+        body {
+            color: white;
+        }
+        a {
+            color: white;
+        }
         @keyframes background-scrolling {
             100% {
                 background-position: 128px 128px;
             }
         }
-        body {
-            color: white;
+        .background {
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            z-index: -1;
             background-color: #7247cb;
             background-image: linear-gradient(45deg, mediumpurple 25%, transparent 25%, transparent 75%, mediumpurple 75%), linear-gradient(-45deg, mediumpurple 25%, transparent 25%, transparent 75%, mediumpurple 75%);
             background-size: 128px 128px;
             background-attachment: fixed;
             animation: background-scrolling 4s infinite linear;
-        }
-        a {
-            color: white;
         }
         .options-group {
             height: 36px;
@@ -122,6 +130,7 @@
     </style>
 {% endblock %}
 {% block body %}
+    <div class="background"></div>
     <div class="options-group">
         {% for font_config in font_configs.values() %}
         <label class="option">
