--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -60,10 +60,11 @@
         }
         @keyframes background-scrolling {
             100% {
-                background-position: 128px 128px;
+                background-position: 96px 96px;
             }
         }
-        .background {
+        body::before {
+            content: "";
             position: fixed;
             top: 0;
             bottom: 0;
@@ -72,7 +73,7 @@
             z-index: -1;
             background-color: #7247cb;
             background-image: linear-gradient(45deg, mediumpurple 25%, transparent 25%, transparent 75%, mediumpurple 75%), linear-gradient(-45deg, mediumpurple 25%, transparent 25%, transparent 75%, mediumpurple 75%);
-            background-size: 128px 128px;
+            background-size: 96px 96px;
             background-attachment: fixed;
             animation: background-scrolling 4s infinite linear;
         }
@@ -126,7 +127,6 @@
     </style>
 {% endblock %}
 {% block body %}
-    <div class="background"></div>
     <div class="options-group">
         {% for font_config in font_configs.values() %}
         <label class="option">
