--- a/assets/templates/index.html
+++ b/assets/templates/index.html
@@ -172,7 +172,7 @@
         const settings = {
             fontSize: 12,
         }
-        const json = localStorage.getItem('settings:index')
+        const json = localStorage.getItem('fusion-pixel-font:settings:index')
         if (json) {
             Object.assign(settings, JSON.parse(json))
         }
@@ -180,7 +180,7 @@
         const page = document.getElementById('page')
 
         window.applySettings = () => {
-            localStorage.setItem('settings:index', JSON.stringify(settings))
+            localStorage.setItem('fusion-pixel-font:settings:index', JSON.stringify(settings))
             page.className = 'font-' + settings.fontSize + 'px-proportional'
         }
 
