Demo 页面修复文本换行问题

--- a/assets/templates/demo.html
+++ b/assets/templates/demo.html
@@ -51,7 +51,7 @@
         }
         {% endfor %}
         a {
-            word-break: break-all;
+            word-break: break-word;
         }
         a:link {
             color: cornflowerblue;
